# My-Standard-Data-Project

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.__folder_name}}/: README.md  pyproject.toml
