[tool.poetry]
name = "{{ cookiecutter.project_name | replace(' ', '_') }}"
version = "0.1.0"
description = "A standard data analysis project template"
authors = ["{{ cookiecutter.author_name }}"]
license = "{{ cookiecutter.license }}"

package-mode = false  # This line disables package mode, avoiding the warning

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

